...
        let view = UIImageView()
        view.translatesAutoresizingMaskIntoConstraints = false
        view.image = UIImage(named: "Userpick")
        return view
    }()
    
    private var logoutButton: UIButton = {
        let button = UIButton.systemButton(
            with: (UIImage(named: "Exit"))!,
            target: self,
            action: #selector(Self.didTapButton))
        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityIdentifier = "logoutButton"
...
